# PWE-PythonWindowEngine

./: LICENSE  README.md  pyproject.toml
PWE/: __init__.py
PWE/cmd/: wrapper.py
PWE/cmd/SDL/: version.py
PWE/config/: settings.py
PWE/src/: __init__.py  game.py
PWE/src/internal/: pwe_version.py  user_system.py  version.py
PWE/src/utils/: errors.py  mathf.py
examples/: get_pwe_version.py
tests/: test_os_support.py  test_pwe_version.py
