[build-system]
requires = ["python >= 3.9"]

[project]
name = "PWE"
version = "1.0.2"
description = "PWE is a game framework for create 2d games"
dependencies = [
]
requires-python = ">= 3.9"

# Docs and licence
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: Unix",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities"
]
